--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body{
   margin:30px;
   max-width: 900px;
-
 }
 
 
@@ -28,7 +27,7 @@ main section{
 
 }
 
-#icon print{
+.iconprint{
   display:flex;
   height:fit-content;
 
@@ -53,4 +52,32 @@ main section{
 #recipe ul li{
   font-size: small;
   margin:2%;
+}
+#Vanessa {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+button {
+  border-radius: 20px;
+  background-color: orangered;
+  color: white;
+}
+
+button:hover{
+  background-color: red;
+  transition-duration: 350ms;
+}
+
+#Vanessa article{
+  width: 77%;
+}
+ 
+footer {
+  margin: 50px 0 100px;
+  text-align: center;
+}
+
+footer img {
+  margin-bottom: 20px;
 }
